# Linux-Defragger

./: CMakeLists.txt  README.md  RELEASE_NOTES.md  TEST_STATUS.md  fat32defrag  install.sh
docs/: BACKEND_ABI.md  DESIGN.md
gui/: affs_engine.py  allocation_mapper.py  apple_engine.py  exfat_engine.py  fat32defrag_gui.py  linux_defragger_gui.py  native_compact_engine.py  ntfs_engine.py  operation_engine.py  privileged_helper.py  version.py
gui/backends/: __init__.py  affs.py  apfs.py  base.py  btrfs.py  contracts.py  exfat.py  ext4.py  fat12.py  fat16.py  fat32.py  fat_common.py  hfs.py  hfsplus.py  io.py  minix.py  ntfs.py  ranges.py  registry.py  swap.py  ufs.py  xfs.py  zfs.py
gui/core/: __init__.py  devices.py  journal.py  operations.py  paths.py
packaging/: fat32defrag-gui  io.github.fat32defrag.desktop  io.github.linuxdefragger.desktop  io.github.liuxdefragger.desktop  linux-defragger  liux-defragger
src/: fat32defrag.c  hfs_engine.c  linux_defragger_engine.c
tests/: create_hfs_fragmented.c  make_batched_defrag_journal.py  make_compact_journal.py  make_compact_tree_image.py  make_fat12_16_image.py  make_fragmented_directory_image.py  make_fragmented_image.py  make_gapped_contiguous_image.py  make_growth_blocker_image.py  make_growth_defrag_image.py  make_hfsplus_fragmented.py  make_interleaved_compact_image.py  mutate_image.py  run_tests.sh  test_allocation_mapper.py  test_apple_backends.py  test_btrfs_backend.py  test_core_modules.py  test_ext_backend.py  test_growth_defrag_ui.py  test_growth_performance_and_names.py  test_gui_revision20.py  test_gui_revision21.py  test_gui_revision22.py  test_gui_revision23.py  test_gui_revision24.py  test_gui_revision25.py  test_gui_revision26.py  test_gui_revision27.py  test_gui_revision28.py  test_gui_revision29.py  test_gui_revision30.py  test_gui_revision31.py  test_gui_revision32.py  test_gui_revision33.py  test_gui_revision35.py  test_mounted_analysis_policy.py  test_native_compact_engine.py  test_ntfs_backend.py  test_ntfs_compact_real.py  (+20 more)
tests/exfat/: make_exfat_nofat_test.py  make_exfat_test.py  run_exfat_tests.sh  test_tail_fill.py
tools/: linux-defragger-testdata.py
